feat: title added feat: new data added feat: added new component "employees-faces" feta: added service feat: added model feat: added form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <employee-list></employee-list>
 <br>
 <app-employees-faces></app-employees-faces>
+<br>
+<br>
+<app-employee-form></app-employee-form>
 
