--- a/src/app/ui/employee-form/employee-form.component.html
+++ b/src/app/ui/employee-form/employee-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="employeeForm" (ngSubmit)="onButtonClick(employeeForm.value)">
+<form [formGroup]="employeeForm" (ngSubmit)="onButtonClick(employeeForm.value)" (ngSubmit)="onFormSubmitted(employeeForm.value)">
   <input type="text" formControlName="name" placeholder="Name">
   <input type="number" formControlName="salary" placeholder="Salary">
   <input type="number" formControlName="age" placeholder="Age">
