feat: title added feat: new data added feat: added new component "employees-faces" feta: added service feat: added model feat: added form feat: added form alert feat: added operation to API feat: added remove function feat: added response feat: fixed hidden property in employee-form feat: added angular routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
-<employee-list></employee-list>
+<!--<employee-list></employee-list>
 <br>
 <app-employees-faces></app-employees-faces>
 <br>
 <br>
-<app-employee-form></app-employee-form>
+<app-employee-form></app-employee-form>-->
+
+<router-outlet>
+  <br>
+  <a routerLink="employee-list"> Go to list of employees </a>
+  <br>
+  <a routerLink="create-employee"> Go to form </a>
+  <br>
+  <br>
+</router-outlet>
 
