--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,5 @@
 <br>
 <app-employee-form></app-employee-form>-->
 
-<router-outlet>
-  <br>
-  <a routerLink="employee-list"> Go to list of employees </a>
-  <br>
-  <a routerLink="create-employee"> Go to form </a>
-  <br>
-  <br>
-</router-outlet>
+<router-outlet></router-outlet>
 
