--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,1 +1,6 @@
-
+<router-outlet>
+  <br>
+  <a routerLink="employee-list"> Go to list of employees </a>
+  <br>
+  <a routerLink="create-employee"> Go to form </a>
+</router-outlet>
