feat: title added feat: new data added feat: added new component "employees-faces" feta: added service feat: added model feat: added form feat: added form alert feat: added operation to API feat: added remove function feat: added response feat: fixed hidden property in employee-form feat: added angular routing feat: added bootstrap

--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,6 +1,11 @@
+<h3>My awesome app</h3>
+<div>
+  Nagle mię trącił płacz na pustym błoniu:
+  <br>
+  "Rzymie! nie jesteś ty już dawnym Rzymem".
+  <br>
+  Tak śpiewał pasterz trzód siedząc na koniu.
+</div>
 <router-outlet>
-  <br>
-  <a routerLink="employee-list"> Go to list of employees </a>
-  <br>
-  <a routerLink="create-employee"> Go to form </a>
 </router-outlet>
+
