--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,37 @@
 <br>
 <app-employee-form></app-employee-form>-->
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/">Home <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="employee-list">List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="create-employee">Form</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
 <router-outlet></router-outlet>
+
+  <footer>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.1);">
+      © My awesome app
+      2022
+      <a class="text-dark" href="https://github.com/IdaSok">IdaSok Github</a>
+    </div>
+  </footer>
+
+
+
+
 
